Closed
Bug 1353610
Opened 8 years ago
Closed 8 years ago
Add null checks to TaskDispatcher.h
Categories
(Core :: XPCOM, defect, P1)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: jwwang, Assigned: jwwang)
References
Details
Attachments
(2 files)
|
1.95 KB,
patch
|
jwwang
:
review+
gchang
:
approval-mozilla-aurora-
|
Details | Diff | Splinter Review |
|
1.56 KB,
patch
|
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
We have
https://crash-stats.mozilla.com/report/index/978fff99-50b0-406f-9d39-a0ecf2170329
https://crash-stats.mozilla.com/report/index/6bfbd5fb-b02f-4292-8549-9db5b2170329
https://crash-stats.mozilla.com/report/index/9edc3dbe-9217-485d-ae27-4f7da2170330
which look like a null deref and crashed on the main thread.
I will add some null checks in the hope of reducing null deref crash so other UAF issues can stand out.
| Assignee | ||
Updated•8 years ago
|
| Assignee | ||
Comment 1•8 years ago
|
||
Per suggestion of bug 1342420 comment 10, I file a new bug for null checks. This patch has been r+ed by bobbyholley in bug 1342420.
Attachment #8854676 -
Flags: review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/678773021f14
Add null checks. r=bobbyholley
Keywords: checkin-needed
Comment 3•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 8854676 [details] [diff] [review]
1353610_add_null_checks.patch
Approval Request Comment
[Feature/Bug causing the regression]:none
[User impact if declined]:A patch to debug null-deref crashes.
[Is this code covered by automated tests?]:yes
[Has the fix been verified in Nightly?]:yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]:none
[Is the change risky?]:low
[Why is the change risky/not risky?]:The change is simple which add some null checks.
[String changes made/needed]:none
Attachment #8854676 -
Flags: approval-mozilla-aurora?
Updated•8 years ago
|
status-firefox54:
--- → affected
Comment 5•8 years ago
|
||
Comment on attachment 8854676 [details] [diff] [review]
1353610_add_null_checks.patch
Hi JW,
If [feature/bug causing the regression] is none, why do we need this to be uplift? Do we have any crashes reported? Aurora54-.
Flags: needinfo?(jwwang)
Attachment #8854676 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora-
| Assignee | ||
Comment 6•8 years ago
|
||
Yes, the crash is reported in bug 1342420 which however is not a regression I think.
Flags: needinfo?(jwwang)
Comment 7•8 years ago
|
||
Seems that it doesn't apply:
---
grafting 390911:678773021f14 "Bug 1353610 - Add null checks. r=bobbyholley"
merging xpcom/threads/TaskDispatcher.h
warning: conflicts while merging xpcom/threads/TaskDispatcher.h! (edit, then use 'hg resolve --mark')
abort: unresolved conflicts, can't continue
(use 'hg resolve' and 'hg graft --continue')
---
Flags: needinfo?(jwwang)
| Assignee | ||
Comment 8•8 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]:none
[User impact if declined]:A patch to debug null-deref crashes.
[Is this code covered by automated tests?]:yes
[Has the fix been verified in Nightly?]:yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]:none
[Is the change risky?]:low
[Why is the change risky/not risky?]:The change is simple which add some null checks.
[String changes made/needed]:none
Flags: needinfo?(jwwang)
Attachment #8856366 -
Flags: approval-mozilla-aurora?
Comment 9•8 years ago
|
||
Comment on attachment 8856366 [details] [diff] [review]
1353610_fix_54_aurora.patch
Help debug null-deref crashes. Aurora54+.
Attachment #8856366 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•8 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•