Bug 1353610 - Add null checks. r=bobbyholley, a=gchang